# prog1

./: .gitignore  .nvim.lua  README.md  animals  main.c  owners  run.sh  shell.nix  test.c  treatments  zip.sh
brainfuck/: bf.c  test.c
bsz/: euklidesz.c  ism_negy.c
clock/: clock.c
ea03/: cesaro.c
ea04/: some.c
ea14/: 12dayz.c
egri/: egri.c
gy03/: 3. prim_felb.c
lab01/: 5. tartaly.c  6. diszkutalas.c  7. for.c  7. while.c  8. szakasz.c  9. masodfoku megoldo.c
lab02/: 2. debug euclid.c  5. legkisebb.c
lab03/: 2. friss.c  3. fv-ek.c  4. mavadavarnyevelveven.c  5. strukt.c  6. osszetett.c  7. menu.c
lab04/: 2. kocka.c  3. tomb.c  3.a. index.c  3.b. pointer.c  3.c. pointerpointer.c  4. fuggolegesen.c  5. trim.c
lab06/: 2. lebegopontos.c  3. emetort.c  4. vegtelen ciklus.c  5. ketto hatv.c  6. szam bitjei.c  7. tiktok.c  8. rajz.c
lab07/: 1. vissza.c  1. vissza.c.in  2. debugmallo.c  3. vissza a jovobe.c  4. sor.c  4. sor.c.in  5. fn.c  5. fn.c.in  debugmalloc.h
lab08/: 1. masolat.c  2. nyujt.c  3. reszstring.c  4. elhagy.c  5. beszur.c
lab09/: 1. fib.c  2. kiiras.c  3. tomb.c  4. szamrendszer.c  5. ezres.c
lab10/: 1.a. memhib.c  1.b. memhib.c  2. listprint.c  3. len.c  4. free.c  5. insert.c  6. push.c  7. search.c
lab11/: main.c
lab13/: 4. hejesirasreform.c  6. fajl.c  7. args.c  (+3 more)
nhf/: CMakeLists.txt  README.md  animal.c  animal.h  animals  console.c  console.h  draw.c  draw.h  econio.c  input.c  input.h  main.c  owner.c  owner.h  owners  sample_gen.py  states.h  states.rs  treatment.c  treatment.h  treatments  utils.c  utils.h  zip.sh
(+19 files in other folders)
